feat(two stage search ranking): backend + frontend only PR (#8180)
Co-authored-by: Alex Yang <alexjst@hotmail.com>